--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -97,6 +97,8 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="{{ SITEURL }}/theme/js/{{ JS_FILE }}"></script>
 
     {# Mathjax for LaTeX rendering #}
     {% if article and article.latex %}
