--- a/themes/dbrgn/static/css/main.css
+++ b/themes/dbrgn/static/css/main.css
@@ -26,7 +26,7 @@ li {
     margin: 0.3em 0em;
     padding: 0em;
 }
-#projects h3 {
+#projects h3, #links h3, #awards h3 {
     margin-left: 1em;
 }
 small {
