--- a/themes/dbrgn/static/css/main.css
+++ b/themes/dbrgn/static/css/main.css
@@ -18,11 +18,21 @@ p {
 
 /* carpedm20 */
 li {
+  line-height: 1.8em;
+}
+
+dd {
+  margin-left: 20px;
+}
+.first.last.simple {
+  padding: 0px;
+}
+#profile li, #links li, #interests li, #awards li, #experience li, #projects li, #presentation li, #skills li {
   list-style: none;
   margin: 0.3em 0em;
   padding: 0em;
 }
-#profile ul {
+#profile ul, #interests ul, #skills ul {
   padding-left: 1em;
 }
 
@@ -39,9 +49,12 @@ small {
   margin-left: 1em;
 }
 
-#projects h3, #links h3, #awards h3, #presentation h3, #experience h3{
+#interests h3, #projects h3, #links h3, #awards h3, #presentation h3, #experience h3{
   margin-left: 1em;
   margin-bottom: 0.8em;
+}
+#interests li, #projects li, #links li, #awards li, #presentation li, #experience li {
+  line-height: 1em;
 }
 
 #footer {
