--- a/output/theme/css/main.css
+++ b/output/theme/css/main.css
@@ -27,7 +27,7 @@ dd {
 .first.last.simple {
   padding: 0px;
 }
-#profile li, #links li, #interests li, #awards li, #experience li, #projects li, #presentation li, #skills li {
+#profile li, #links li, #interests li, #awards li, #experience li, #projects li, #presentation li, #skills li, #translation li {
   list-style: none;
   margin: 0.3em 0em;
   padding: 0em;
@@ -49,11 +49,11 @@ small {
   margin-left: 1em;
 }
 
-#interests h3, #projects h3, #links h3, #awards h3, #presentation h3, #experience h3{
+#interests h3, #projects h3, #links h3, #awards h3, #presentation h3, #experience h3, #translation h3 {
   margin-left: 1em;
   margin-bottom: 0.8em;
 }
-#interests li, #projects li, #links li, #awards li, #presentation li, #experience li {
+#interests li, #projects li, #links li, #awards li, #presentation li, #experience li, #translation li {
   line-height: 1em;
 }
 
