--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -62,6 +62,8 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css">
 
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
     {% endblock head %}
 </head>
 
