--- a/themes/dbrgn/static/css/main.css
+++ b/themes/dbrgn/static/css/main.css
@@ -49,7 +49,7 @@ small {
   margin-left: 1em;
 }
 
-#interests h3, #projects h3, #links h3, #awards h3, #presentation h3, #experience h3, #translation h3 {
+#interests h3, #projects h3, #links h3, #awards h3, #presentation h3, #experience h3, #translation h3 #current h3, #old h3 {
   margin-left: 1em;
   margin-bottom: 0.8em;
 }
