--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -60,6 +60,7 @@
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/carpedm20.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css">
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
