--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -9,6 +9,7 @@
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="author" content="{{ AUTHOR }}" />
+    <meta content="Machine Learning/Data Visualization/Computer Security" name="description">
     {% if article and article.summary %}
         <meta name="description" content="{{ article.summary|striptags }}" />
     {% endif %}
