--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/carpedm20.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
