--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -60,8 +60,8 @@
         <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pure.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/carpedm20.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css">
 
