--- a/themes/dbrgn/static/css/carpedm20.css
+++ b/themes/dbrgn/static/css/carpedm20.css
@@ -1,5 +1,10 @@
 /* carpedm20 */
 @import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,400);
+@import url(//cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css);
+
+body {
+  font-family: "Nanum Barun Gothic";
+}
 
 em, #papers * {
   font-family: 'Vollkorn', serif !important;
@@ -71,7 +76,6 @@ small {
 }
 
 .pure-g [class *="pure-u"] {
-  font-family: sans-serif;
 }
 .pure-u-1, .pure-u-1-1, .pure-u-1-2, .pure-u-1-3, .pure-u-2-3, .pure-u-1-4, .pure-u-3-4, .pure-u-1-5, .pure-u-2-5, .pure-u-3-5, .pure-u-4-5, .pure-u-5-5, .pure-u-1-6, .pure-u-5-6, .pure-u-1-8, .pure-u-3-8, .pure-u-5-8, .pure-u-7-8, .pure-u-1-12, .pure-u-5-12, .pure-u-7-12, .pure-u-11-12, .pure-u-1-24, .pure-u-2-24, .pure-u-3-24, .pure-u-4-24, .pure-u-5-24, .pure-u-6-24, .pure-u-7-24, .pure-u-8-24, .pure-u-9-24, .pure-u-10-24, .pure-u-11-24, .pure-u-12-24, .pure-u-13-24, .pure-u-14-24, .pure-u-15-24, .pure-u-16-24, .pure-u-17-24, .pure-u-18-24, .pure-u-19-24, .pure-u-20-24, .pure-u-21-24, .pure-u-22-24, .pure-u-23-24, .pure-u-24-24 {
   display: inline-block;
@@ -84,7 +88,6 @@ small {
 .pure-g {
   letter-spacing: -.31em;
   text-rendering: optimizespeed;
-  font-family: FreeSans,Arimo,"Droid Sans",Helvetica,Arial,sans-serif;
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
   display: -ms-flexbox;
