--- a/output/theme/css/carpedm20.css
+++ b/output/theme/css/carpedm20.css
@@ -93,3 +93,44 @@ small {
   display: -ms-flexbox;
   -ms-flex-flow: row wrap;
 }
+
+
+.showcode{
+  background: #3F51B5;
+  color: white;
+  width: 55px;
+  height: 55px;
+  text-align: center;
+  position: absolute;
+  right: 1em;
+  bottom: 2em;
+  margin-bottom: -15px;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+  transition: all .3s;
+}
+.viewCode .showcode{
+  -webkit-transform: rotateX(-180deg);
+  transform: rotateX(-180deg);
+  box-shadow: 0px -2px 5px 0 rgba(0, 0, 0, 0.26);      
+} 
+.icon-nocode, .icon-yepcode{
+  transition: opacity .3s;
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 100%;
+  line-height: 58px;
+}    
+.icon-nocode{
+  opacity: 0;
+}
+.viewCode .icon-nocode{
+  opacity: 1;
+}
+.viewCode .icon-yepcode{
+  opacity: 0;
+}
+
+
