--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -60,12 +60,13 @@
         <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
+    <link href="http://nobitagit.github.io/material-floating-button/mfb.css" rel="stylesheet" type="text/css">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pure.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/carpedm20.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css">
 
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
     {% endblock head %}
 </head>
@@ -101,6 +102,10 @@
       ga('send', 'pageview');
 
     </script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://nobitagit.github.io/material-floating-button/mfb.js"></script>
+    <script src="http://nobitagit.github.io/material-floating-button/lib/modernizr.touch.js"></script>
+    <script src="../theme/js/script.js"></script>
 
     {# Mathjax for LaTeX rendering #}
     {% if article and article.latex %}
