--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -61,7 +61,7 @@
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
     <link href="{{ SITEURL }}/theme/css/mfb.css" rel="stylesheet" type="text/css">
-    <link href="{{ SITEURL }}/theme/css/ionicons.min.css" rel="stylesheet" type="text/css">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pure.css" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/carpedm20.css" type="text/css">
