--- a/themes/dbrgn/static/css/carpedm20.css
+++ b/themes/dbrgn/static/css/carpedm20.css
@@ -2,6 +2,10 @@
 @import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,400);
 @import url(//cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css);
 
+.black {
+  color: black;
+}
+
 body {
   font-family: "Nanum Barun Gothic";
 }
