--- a/output/theme/css/carpedm20.css
+++ b/output/theme/css/carpedm20.css
@@ -84,10 +84,6 @@ small {
   /*line-height: 0.5em;*/
 }
 
-#scholarships p, #etc p {
-  line-height: 1em;
-}
-
 .pure-g [class *="pure-u"] {
 }
 .pure-u-1, .pure-u-1-1, .pure-u-1-2, .pure-u-1-3, .pure-u-2-3, .pure-u-1-4, .pure-u-3-4, .pure-u-1-5, .pure-u-2-5, .pure-u-3-5, .pure-u-4-5, .pure-u-5-5, .pure-u-1-6, .pure-u-5-6, .pure-u-1-8, .pure-u-3-8, .pure-u-5-8, .pure-u-7-8, .pure-u-1-12, .pure-u-5-12, .pure-u-7-12, .pure-u-11-12, .pure-u-1-24, .pure-u-2-24, .pure-u-3-24, .pure-u-4-24, .pure-u-5-24, .pure-u-6-24, .pure-u-7-24, .pure-u-8-24, .pure-u-9-24, .pure-u-10-24, .pure-u-11-24, .pure-u-12-24, .pure-u-13-24, .pure-u-14-24, .pure-u-15-24, .pure-u-16-24, .pure-u-17-24, .pure-u-18-24, .pure-u-19-24, .pure-u-20-24, .pure-u-21-24, .pure-u-22-24, .pure-u-23-24, .pure-u-24-24 {
@@ -148,4 +144,13 @@ small {
 
 div#publications ul {
   padding: 0 0 0 20px !important;
+}
+
+#scholarships p, #etc p {
+  line-height: 1em;
+}
+
+#publications li {
+  line-height: 1.5em;
+  margin: 0em 0em 0.7em 0em;
 }
