--- a/output/theme/css/carpedm20.css
+++ b/output/theme/css/carpedm20.css
@@ -28,12 +28,12 @@ dd {
 .first.last.simple {
   padding: 0px;
 }
-#papers li, #profile li, #about-me li, #introduction li, #links li, #interests li, #publications li, #awards li, #development-experience li, #work-experience li, #research-experience li, #experience li, #projects li, #presentations li, #skills li, #translation li, #campus-activities li, #id5 li {
+#papers li, #profile li, #taehoon-kim li, #about-me li, #introduction li, #links li, #interests li, #publications li, #awards li, #development-experience li, #work-experience li, #research-experience li, #experience li, #projects li, #presentations li, #skills li, #translation li, #campus-activities li, #id5 li {
   list-style: none;
   margin: 0.3em 0em;
   padding: 0em;
 }
-#profile ul, #skills ul, #about-me ul, #introduction ul {
+#profile ul, #taehoon-kim ul, #skills ul, #about-me ul, #introduction ul {
   padding-left: 1em;
 }
 #id5 ul {
