--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     {% block head %}
 
-    <title>carpedm20</title>
+    <title>Taehoon Kim (carpedm20)</title>
 
     <!-- meta -->
     <meta charset="utf-8" />
