--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -9,7 +9,7 @@
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="author" content="{{ AUTHOR }}" />
-    <meta content="Machine Learning, Natural Language Processing, Computer Vision" name="description">
+    <meta content="Reinforcement Learning, Natural Language Processing, Computer Vision" name="description">
     {% if article and article.summary %}
         <meta name="description" content="{{ article.summary|striptags }}" />
     {% endif %}
