--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -25,6 +25,8 @@
         <meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION }}" />
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url" content="http://carpedm20.github.io"/>
+    <meta property="og:image" content="http://carpedm20.github.io/images/carpedm20.png" />
 
     <!-- favicon -->
     <link rel="icon" href="/theme/favicon.ico" type="image/x-icon">
