--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Taehoon Kim (김태훈)" />
     <meta content="Reinforcement Learning, Computer Vision, Machine Learning" name="description">
-    <meta name="keywords" content="Reinforcement Learning,Machine Learning,김태훈,강화 학습">
+    <meta name="keywords" content="carpedm20,Reinforcement Learning,Machine Learning,김태훈,강화 학습">
     {% if article and article.summary %}
         <meta name="description" content="{{ article.summary|striptags }}" />
     {% endif %}
