--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -9,8 +9,8 @@
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="author" content="Taehoon Kim (김태훈)" />
-    <meta content="Reinforcement Learning, Computer Vision, Machine Learning" name="description">
-    <meta name="keywords" content="carpedm20,Reinforcement Learning,Machine Learning,김태훈,강화 학습">
+    <meta content="Reinforcement Learning, Machine Learning" name="description">
+    <meta name="keywords" content="Reinforcement Learning,Machine Learning,김태훈,강화 학습,머신러닝">
     {% if article and article.summary %}
         <meta name="description" content="{{ article.summary|striptags }}" />
     {% endif %}
