--- a/output/theme/css/main.css
+++ b/output/theme/css/main.css
@@ -176,8 +176,9 @@ a, a:visited {
 }
 
 .entry-overview {
+    /* carpedm20 
     line-height: 2em;
-    margin-bottom: 35px;
+    margin-bottom: 35px;*/
 }
 
 .entry-overview h1 {
